--- a/index.html
+++ b/index.html
@@ -45,8 +45,14 @@
             <div id="container"></div>
             
         </main>
-    </body>
-    <footer>
+	</body>
+	<footer>
+		<h3>Acknowledgments</h3>
+		  <ul>
+		    <li>This project is not affiliated with The Pokémon Company. All rights reserved to The Pokémon Company, Nintendo, Game Freak and Creatures.</li>
+		    <li>Some assets were obtained from Bulbapedia.</li>
+		  </ul>
+	</footer>
     </footer>
     <script src="data.js"></script>
 </html>
