--- a/index.html
+++ b/index.html
@@ -60,5 +60,5 @@
 	</footer>
     </footer>
     <script src="data.js"></script>
-	<script src ="index.js"></script>
+	<script type="module" src="index.js"></script>
 </html>
