--- a/pokemon.html
+++ b/pokemon.html
@@ -42,18 +42,24 @@
         pointHoverBorderColor: 'rgb(54, 162, 235)'
       }]
     };
-
+    
     const config = {
-      type: 'radar',
-      data,
-      options: {
-        elements: {
-          line: {
-            borderWidth: 3
-          }
-        }
-      },
-    };
+  type: 'radar',
+  data,
+  options: {
+    elements: {
+      line: {
+        borderWidth: 3
+      }
+    },
+    scales: {
+      r: {
+        suggestedMax: 255
+      }
+    }
+  },
+};
+
 
     const ctx = document.getElementById('radar-chart').getContext('2d');
     new Chart(ctx, config);
