--- a/pokemon.html
+++ b/pokemon.html
@@ -11,6 +11,7 @@
   </style>
 </head>
 <body>
+  <script src="pokemon.js"></script>
   <canvas id="radar-chart" class="radar-chart"></canvas>
   <script src="stats.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
