--- a/pokemon.html
+++ b/pokemon.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="es">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pokémon</title>
   <style>
     .radar-chart {
@@ -11,7 +14,7 @@
   </style>
 </head>
 <body>
-  <script src="pokemon.js"></script>
+  <script type = module src="pokemon.js"></script>
   <canvas id="radar-chart" class="radar-chart"></canvas>
   <script src="stats.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -29,7 +32,7 @@ const pokemon = pokemons.find(pokemon => pokemon.id === pokemonId);
         label: pokemon.name,
         data: [pokemon.hp, pokemon.atk, pokemon.def, pokemon.spAtk, pokemon.spDef, pokemon.spd],
         fill: true,
-        backgroundColor: 'rgba(54, 162, 235, 0.2)',
+        backgroundColor: 'rgba(100, 82, 86, 0.5)',
         borderColor: 'rgb(54, 162, 235)',
         pointBackgroundColor: 'rgb(54, 162, 235)',
         pointBorderColor: '#fff',
