--- a/pokemon.html
+++ b/pokemon.html
@@ -19,6 +19,7 @@
   <script src="stats.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script>
+	  import { pokemons } from './data.js';
     // Extract Pokémon ID from URL
 const urlParams = new URLSearchParams(window.location.search);
 const pokemonId = parseInt(urlParams.get('pokemonId'));
