--- a/pokemon.html
+++ b/pokemon.html
@@ -18,7 +18,7 @@
   <canvas id="radar-chart" class="radar-chart"></canvas>
   <script src="stats.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script>
+  <script type = module>
 	  import { pokemons } from './data.js';
     // Extract Pokémon ID from URL
 const urlParams = new URLSearchParams(window.location.search);
