--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             </div>
         </div>
         <script>
+	document.addEventListener('DOMContentLoaded', function() {
         // Obtener los elementos relevantes del DOM
         const searchInput = document.getElementById('search');
         const filterButton = document.querySelector('.icon-filter');
@@ -66,6 +67,7 @@
                 }
             }
         }
+	});
         </script>
     </header>
 
