--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header>
         <form action="" class="search-bar">
 	<input type="search" name="search" pattern=".*\S.*" required>
-	<button class="search-btn" type=submit onclick="buscar()">Buscar</button>
+	<button class="search-btn" type=submit onclick="buscar()"></button>
 		<span>Search</span>
 	</button>
 </form>
