--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
 <body>
     <header>
-        <form action="" class="search-bar">
-	<input type="search" name="search" pattern=".*\S.*" required>
-	<button class="search-btn" type=submit onclick="buscar()"></button>
-	</button>
-</form>
+        <<div class="box">
+    <form name="search">
+        <input type="text" class="input" name="txt" onmouseout="this.value = ''; this.blur();">
+    </form>
+    <i class="fas fa-search"></i>
         <div class="container-filter container">
             <div class="icon-filter">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
